--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /PPE/nbproject/private/
 /Bounties_Hunter/nbproject/private/
 /PrestaChope/nbproject/private/
+/NetBeansProjects/heritage/nbproject/private/
+/NetBeansProjects/heritage/build/
