--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /NetBeansProjects/heritage/build/
 /PrestaChope6/
 /js/nbproject/private/
+/NetBeansProjects/Banknarok/nbproject/private/
+/NetBeansProjects/Banknarok/build/
