--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 /NetBeansProjects/Banknarok/build/
 /NetBeansProjects/Interfaces/nbproject/private/
 /NetBeansProjects/Interfaces/build/
+/ClermontCommece/nbproject/private/
+/SQL_ROBOT/nbproject/private/
+/JS_test/nbproject/private/
+/JAVA/Maven/target/
+/JAVA/testFX/target/
