--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /NetBeansProjects/Banknarok/build/
 /NetBeansProjects/Interfaces/nbproject/private/
 /NetBeansProjects/Interfaces/build/
+/FireBlog_training/nbproject/private/
